assets/css/3-sections/_sections.sass
.wrap
  background: -webkit-linear-gradient($brand-color, #59929e)
  background: -o-linear-gradient($brand-color, #59929e)
  background: -moz-linear-gradient($brand-color, #59929e)
  background: linear-gradient($brand-color, #59929e)

$section-height: 100vh
.section
  height: $section-height
  color: #fff
  width: 100%
  margin: 0px
  text-align: center


.why, .what, .who
  position: relative
  overflow: hidden
  @extend .section
  h1
    padding-top: $section-height/2.5
    position: relative
    z-index: 2
  img.background
    position: absolute
    left: 0
    top: 0
    width: 100%
    height: auto
    opacity: 0.15

.what
  h1
    padding-top: $section-height/5
    margin-bottom: 100px

a.button
  z-index: 2
  position: relative
  margin: 30px 0
  display: inline-block
  border: 1px solid #fff
  border-radius: 5px
  color: #fff
  font-size: 1.4em
  font-weight: normal
  padding: 10px 60px
  &:hover
    background-color: $brand-color
    border-color: $brand-color

.logos
  max-width: 920px
  display: block
  margin: 0 auto
  position: relative
  z-index: 500

